<resources>
    <string name="app_name">扫书</string>
    <!-- ActivityTitle-->
    <string name="activity_scan_title">条形码扫描</string>
    <string name="title_bookshelf">书架</string>
    <string name="title_classify">分类</string>
    <string name="title_discovery">发现</string>
    <string name="title_mine">我的</string>

    <!-- MainActivity-->
    <string name="menu_bookshelf">书架</string>
    <string name="menu_classify">分类</string>
    <string name="menu_discovery">发现</string>
    <string name="menu_mine">我的</string>
    <string name="doubleclick_exit">双击退出</string>

    <!-- ScanBookDetailsActivity-->
    <string name="activity_book_details_title">图书信息</string>
    <string name="book_author">作者:</string>
    <string name="book_price">价格:</string>
    <string name="book_pages">页数:</string>
    <string name="book_publisher">出版社:</string>
    <string name="book_isbn">ISBN:</string>
    <string name="book_pubdate">出版日期:</string>

    <string name="btn_add_to_shelf">加入书架</string>
    <string name="author_summary">作者简介</string>
    <string name="book_summary">图书简介</string>
    <string name="book_catlog">图书目录</string>

    <string name="btn_add_to_bookshelf_success">添加成功</string>
    <string name="btn_add_to_bookshelf_failed">添加失败</string>


    <!-- SplashActivity-->
    <string name="splash_text_1">Android开发艺术探索</string>
    <string name="splash_text_2">扫书，收藏</string>

    <!-- LoginActivity-->
    <string name="login_title">登录</string>
    <string name="login_title_right_button_text">注册</string>
    <string name="btn_login">登录</string>
    <string name="btn_forget_password">忘记密码?</string>
    <string name="et_hint_account">请输入手机号/邮箱/用户名</string>
    <string name="et_hint_password">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">用户名或密码错误</string>
    <string name="login_content_is_empty">用户名和密码不能为空</string>

    <!-- RegisterActivity-->
    <string name="et_hint_register_account">请输入用户名</string>
    <string name="et_hint_password_first">请输入密码(6&#8211;12位英文和数字)</string>
    <string name="et_hint_password_second">请再次输入密码</string>
    <string name="btn_register_commit">注册</string>
    <string name="register_title">注册</string>
    <string name="toast_username_is_null">用户名不能为空</string>
    <string name="toast_password_is_null">密码不能为空</string>
    <string name="toast_pwd_again_is_null">请再次输入密码</string>
    <string name="toast_pwd_again_is_wrong">两次密码输入不一致,请重新输入</string>
    <string name="toast_pwd_style_wrong">密码为6&#8211;12位英文和数字</string>
    <string name="toast_net_wrong">网络不可用</string>
    <string name="progress_dialog_text">正在注册&#8230;</string>
    <string name="register_success">注册成功</string>
    <string name="user_is_already_exist">用户名已存在</string>

    <!-- ScanActivity-->
    <string name="scan_text">将二维码/条形码放入框内, 即可自动扫描</string>
    <string name="scaning">正在扫描&#8230;</string>
    <string name="scan_failed">扫描失败，请重试</string>

    <!--SettingActivity-->
    <string name="logout">退出当前账号</string>

    <!-- BookActivity-->
    <string name="spread">展开</string>
    <string name="merge">合并</string>

    <!-- UserProfileActivity-->
    <string name="my_profile">个人资料</string>
    <string name="profile_header">头像</string>
    <string name="profile_username">用户名</string>
    <string name="profile_nickname">昵称</string>
    <string name="profile_sex">性别</string>
    <string name="proflie_age">头像</string>
    <string name="profile_sign_up_time">注册时间</string>

    <!-- fragment_mine-->
    <string name="setting">设置</string>

    <!-- fragment_discovery-->
    <string name="search">搜索</string>
    <string name="recommend">推荐</string>

    <!-- xListView-->
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="bookshelf_is_empty">书架为空</string>
    <string name="bookshelf_add_book">去添加</string>
</resources>
