<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/menu_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_bookshelf"
                style="@style/radio_btn_style"
                android:drawableTop="@drawable/menu_bookshelf_btn"
                android:text="@string/menu_bookshelf" />

            <RadioButton
                android:id="@+id/btn_classify"
                style="@style/radio_btn_style"
                android:drawableTop="@drawable/menu_classify_btn"
                android:text="@string/menu_classify" />

            <RadioButton
                android:id="@+id/btn_discovery"
                style="@style/radio_btn_style"
                android:drawableTop="@drawable/menu_discovery_btn"
                android:text="@string/menu_discovery" />

            <RadioButton
                android:id="@+id/btn_mine"
                style="@style/radio_btn_style"
                android:drawableTop="@drawable/menu_mine_btn"
                android:text="@string/menu_mine" />
        </RadioGroup>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:layout_above="@id/bottom_menu">

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/menu_above_line_color"
        android:layout_above="@id/bottom_menu"/>


</RelativeLayout>