<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_back_color_gray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <com.hxm.books.view.ClearEditText
        android:id="@+id/et_register_account"
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:layout_height="@dimen/et_height_45"
        android:layout_marginTop="@dimen/base_margin_15"
        android:layout_marginRight="@dimen/base_margin_10"
        android:layout_marginLeft="@dimen/base_margin_10"
        android:paddingLeft="@dimen/et_padding"
        android:paddingRight="@dimen/et_padding"
        android:maxLines="1"
        android:textColorHint="@color/et_hint_color"
        android:hint="@string/et_hint_register_account"/>
    <com.hxm.books.view.ClearEditText
        android:id="@+id/et_register_password_first"
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:layout_height="@dimen/et_height_45"
        android:layout_marginTop="@dimen/base_margin_15"
        android:layout_marginRight="@dimen/base_margin_10"
        android:layout_marginLeft="@dimen/base_margin_10"
        android:paddingLeft="@dimen/et_padding"
        android:paddingRight="@dimen/et_padding"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/et_hint_color"
        android:hint="@string/et_hint_password_first"/>
    <com.hxm.books.view.ClearEditText
        android:id="@+id/et_register_password_second"
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:layout_height="@dimen/et_height_45"
        android:layout_marginTop="@dimen/base_margin_15"
        android:layout_marginRight="@dimen/base_margin_10"
        android:layout_marginLeft="@dimen/base_margin_10"
        android:paddingLeft="@dimen/et_padding"
        android:paddingRight="@dimen/et_padding"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/et_hint_color"
        android:hint="@string/et_hint_password_second"/>

    <Button
        android:id="@+id/btn_register_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_45"
        android:layout_marginTop="@dimen/base_margin_20"
        android:layout_marginLeft="@dimen/base_margin_10"
        android:layout_marginRight="@dimen/base_margin_10"
        android:background="@drawable/btn_login_background"
        android:text="@string/btn_register_commit"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/btn_login_text_color"/>

</LinearLayout>