<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/layout_background_color"
    android:orientation="vertical">
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
    <RelativeLayout
        android:id="@+id/profile_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_padding_10"
        android:background="@drawable/white_clickable_background"
        android:clickable="true"
        android:padding="@dimen/base_padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_header"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:id="@+id/iv_profile_header"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/default_head" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/base_padding_10"
        android:layout_marginRight="@dimen/base_padding_10"
        android:background="@color/divider_horizontal" />

    <RelativeLayout
        android:id="@+id/profile_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_clickable_background"
        android:clickable="true"
        android:padding="@dimen/base_padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_nickname"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_profile_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/base_padding_10"
        android:layout_marginRight="@dimen/base_padding_10"
        android:background="@color/divider_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:clickable="false"
        android:padding="@dimen/base_padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_username"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_sex_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_15"
        android:background="@drawable/white_clickable_background"
        android:clickable="true"
        android:padding="@dimen/base_padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_sex"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_profile_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/base_padding_10"
        android:layout_marginRight="@dimen/base_padding_10"
        android:background="@color/divider_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:clickable="false"
        android:padding="@dimen/base_padding_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_sign_up_time"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_profile_sign_up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>